--- a/Client/index.html
+++ b/Client/index.html
@@ -25,7 +25,7 @@
         
             <button type="button" onclick="login()" class="btn">Login</button><br><br>
             <p style="text-align:center"> <span>
-                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Sign up with Facebook 
+                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Sign in with Facebook 
                     </fb:login-button></span></p>
             <p style="text-align:center">Don't have account ? <a href="./signup.html">Register</a></p>
           </form>
